--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,13 +31,17 @@ body {
     background-color: var(--color-2);
     color: var(--color-1);
     width: 100%;
-    height: 50px;
+    height: 150px;
     border-bottom: 1px solid var(--color-1);
     box-shadow: 0px 0px 10px var(--shadow-color);
 }
 
 .header-container {
     width: 1000px;
+}
+
+.logo {
+    width: 200px;
 }
 
 .main-description {
